<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        
        <Button android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.5"
        android:id="@+id/newButton" android:text="@string/newButton" style="?android:attr/buttonBarStyle"
        android:background="@android:color/darker_gray" android:layout_margin="2dip"/>
    
       <Button android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.5"
        android:id="@+id/syncButton" android:text="@string/syncButton" style="?android:attr/buttonBarStyle"
        android:background="@android:color/darker_gray" android:layout_margin="2dip"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_marginBottom="2dip" android:padding="10dip">
       
        <Spinner android:id="@+id/queryData" android:layout_width="0dip"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"/>
        
        <Button android:id="@+id/queryButton" android:layout_width="0dip" android:layout_weight="0.3"
            android:layout_height="wrap_content" android:text="@string/queryButton"/>
        
       </LinearLayout>
    
	<TextView android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/instructions"
	    style="@style/TitleStyle"
	    android:layout_marginBottom="1dip"/>
	
	<ListView android:id="@+id/contactList"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
	</ListView>
	
</LinearLayout>
